--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Desktop Only Website</title>
         <link rel="stylesheet" href="index.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
@@ -170,6 +172,13 @@
                 <a href="https://github.com/sivasanjeevs"><i class='bx bxl-github' ></i></a>
                 <a href="https://linkedin.com/in/sivasanjeev-s-02931b282"><i class='bx bxl-linkedin' ></i></a>
             </div>
-        </section>    
+        </section>   
+        <div class="mobile-warning">
+          This website is not available on mobile devices.
+      </div>
+      <div class="content">
+          <h1>Welcome to our Desktop Only Website</h1>
+          <p>This content is only accessible on desktop screens.</p>
+      </div> 
     </body>
 </html>
