--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <a href="#page2">About</a>
                 <a href="#page3">Skills</a>
                 <a href="#page4">Projects</a>
-                <a href="#page5">Designs</a>
-                <a href="#page6">Contact</a>
+                <a href="#page5">Artworks</a>
+                <a href="#page6">Profile</a>
             </nav>
         </header>
         <section class="a" id="page1">
@@ -30,7 +30,7 @@
         </section>
         <section class="b" id="page2">
             <div class="box">
-                <img src= "siv.jpeg"
+                <img class="i" src= "siv.jpeg"
             alt="centred-image">
             </div>
             <h1>Hey there! i'm Sivasanjeev S</h1>
@@ -166,12 +166,21 @@
             <div>
             </div>
         </section>
+        <section class="g">
+          <h1> Sketches</h1>
+          <img class="i3" src="c.jpeg">
+          <img class="i2" src="a.jpeg">
+          <img class="i4" src="d.jpeg">
+          <img class="i1" src="b.jpeg">
+      </section>
         <section class="d" id="page6">
+            
             <div class="contact">
                 <a href="https://www.instagram.com/sivasanjeev_s/"><i class='bx bxl-instagram-alt' ></i></a>
                 <a href="https://github.com/sivasanjeevs"><i class='bx bxl-github' ></i></a>
                 <a href="https://linkedin.com/in/sivasanjeev-s-02931b282"><i class='bx bxl-linkedin' ></i></a>
             </div>
-        </section>    
+        </section>   
+     
     </body>
 </html>
