--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="error-message">
         <h1>Error</h1>
         <p>This website is not accessible on mobile devices.</p>
+        <p> use pc or laptop</p>
      </div>
      <div id="content">
       <header class="top"> 
