--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
       <div id="error-message">
         <h1>Error</h1>
         <p>This website is not accessible on mobile devices.</p>
-        <p> use pc or laptop</p>
+        
      </div>
      <div id="content">
       <header class="top"> 
         <a class="logo"> scube.</a>
         <nav class="navbar">
-            <a href="#page1">Home</a>
+            <!--<a href="#page1">Home</a>-->
             <a href="#page2">About</a>
             <a href="#page3">Skills</a>
             <a href="#page4">Projects</a>
-            <a href="#page5">Artworks</a>
-            <a href="#page6">Profile</a>
+            <a href="#page5">Designs</a>
+            <a href="#page6">Artworks</a>
+            <a href="#page7">Profile</a>
         </nav>
     </header>
     <section class="a" id="page1">
@@ -31,7 +32,6 @@
             <video autoplay muted loop>
                 <source src="production_id_4990232 (1080p).mp4" type="video/mp4">
             </video>
-            <h3></h3>
             <h1>HELLO!</h1>
         </div>
     </section>
@@ -121,7 +121,7 @@
                     <h1>Remote Desktop</h1>
                   </div>
                   <div class="flip-card-back">
-                    <p></p>
+                    <p>The "Simple Remote Desktop" application utilizes socket programming and Tkinter to provide a basic remote desktop access solution. It sets up a client-server connection, enabling the client to view and control the server's desktop interface remotely</p>
                   </div>
                 </div>
               </div>  
@@ -131,9 +131,7 @@
                     <h1>os shell</h1>
                   </div>
                   <div class="flip-card-back">
-                    <h1></h1>
-                    <p></p>
-                    <p></p>
+                    <p>This project involves creating a custom shell for an operating system, designed to interpret and execute user commands. The shell provides essential functionalities such as command parsing, process creation, and file system navigation, enhancing user interaction with the OS.</p>
                   </div>
                 </div>
               </div>  
@@ -143,9 +141,7 @@
                     <h1>movie booking system</h1>
                   </div>
                   <div class="flip-card-back">
-                    <h1></h1>
-                    <p></p>
-                    <p></p>
+                    <p>This project develops a Movie Ticket Booking System using React for the front-end, Node.js for the back-end, and MySQL for the database. The system allows users to browse movies, select showtimes, book tickets, and manage accounts, while administrators can manage schedules and view bookings</p>
                   </div>
                 </div>
               </div> 
@@ -155,9 +151,7 @@
                     <h1>car rental system</h1>
                   </div>
                   <div class="flip-card-back">
-                    <h1></h1>
-                    <p></p>
-                    <p></p>
+                    <p>This project implements a Car Rental System in C++ featuring user authentication. It allows users to securely log in, browse available cars, make reservations, and manage their rental history, providing an efficient and secure platform for car rentals.</p>
                   </div>
                 </div>
               </div>
@@ -173,14 +167,14 @@
         <div>
         </div>
     </section>
-    <section class="g">
+    <section class="g" id="page6">
       <h1> Sketches</h1>
       <img class="i3" src="c.jpeg">
       <img class="i2" src="a.jpeg">
       <img class="i4" src="d.jpeg">
       <img class="i1" src="b.jpeg">
   </section>
-    <section class="d" id="page6">
+    <section class="d" id="page7">
         
         <div class="contact">
             <a href="https://www.instagram.com/sivasanjeev_s/"><i class='bx bxl-instagram-alt' ></i></a>
