--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="skills mysql">50%</div>
         </div>
         <h2>DESIGN</h2>
-        <p>Adobe photoshop</p>
+        <p>Photoshop</p>
         <div class="container">
           <div class="skills ap">95%</div>
         </div>
