--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <a href="#page7">Profile</a>
         </nav>
     </header>
-    <!--<section class="a" id="page1">
+    <section class="a" id="page1">
         <div class="front">
             <video autoplay muted loop>
                 <source src="production_id_4990232 (1080p).mp4" type="video/mp4">
             </video>
             <h1>HELLO!</h1>
         </div>
-    </section>-->
+    </section>
     <section class="b" id="page2">
         <div class="box">
             <img class="i" src= "siv.jpeg"
