--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
         </div>
     </section>
     <section class="b" id="page2">
+      <div class="boxes2"></div>
+        <div class="boxes1">
+        </div>
         <div class="box">
             <img class="i" src= "siv.jpeg"
         alt="centred-image">
         </div>
         <h1>Hey there! i'm Sivasanjeev S</h1>
+        <div class="boxes3">
+          
+        </div>
 
     </section>
         
