--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2>DATABASE DESIGN</h2>
         <p>Oracle</p>
         <div class="container">
-          <div class="skills oracle">50%</div>
+          <div class="skills oracle">60%</div>
         </div>
         <p>SQL</p>
         <div class="container">
@@ -109,13 +109,16 @@
         <h2>DESIGN</h2>
         <p>Photoshop</p>
         <div class="container">
-          <div class="skills ap">95%</div>
+          <div class="skills ap">90%</div>
         </div>
-        <p>canva</p>
+        <p>Canva</p>
         <div class="container">
           <div class="skills ca">95%</div>
         </div>
-
+        <p>Figma</p>
+        <div class="container">
+          <div class="skills fi">65%</div>
+        </div>
     </section>
 
     <section class="f" id="page4">
