--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img class="i" src= "siv.jpeg"
         alt="centred-image">
         </div>
-        <h1>Hey there! i'm Sivasanjeev S</h1>
+        <h1>Hey there! i'm Sivasanjeev</h1>
         <div class="boxes3">
           
         </div>
