--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Desktop Only Website</title>
         <script src="script.js" defer></script>
         <link rel="stylesheet" href="index.css">
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Birthstone+Bounce:wght@400;500&display=swap');
+        </style>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
