--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Desktop Only Website</title>
         <script src="script.js" defer></script>
-        <link rel="stylesheet" href="index.css">
         <style>
           @import url('https://fonts.googleapis.com/css2?family=Birthstone+Bounce:wght@400;500&display=swap');
         </style>
+        <link rel="stylesheet" href="index.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
@@ -38,9 +38,12 @@
             <h1>HELLO!</h1>
         </div>
     </section>-->
-    <section class="b" id="page2">
-      <div class="boxes2"></div>
-        <div class="boxes1">
+    <div class="block">
+
+    </div>
+    <section class="b" id="page2" >
+      <div class="boxes2" ></div>
+        <div class="boxes1" >
         </div>
         <div class="box">
             <img class="i" src= "siv.jpeg"
@@ -48,9 +51,7 @@
         </div>
         <h1>Hey there! i'm Sivasanjeev</h1>
         <div class="boxes3">
-          
         </div>
-
     </section>
         
     <section class="e" id="page3">
@@ -127,46 +128,51 @@
     <section class="f" id="page4">
         <h1>PROJECTS</h1>   
         <div class="card">
+          <span style='font-size:50px;'>&#9548;</span>
             <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <h1>Remote Desktop</h1>
+                    <h2>Remote Desktop</h2>
                   </div>
                   <div class="flip-card-back">
-                    <p>The "Simple Remote Desktop" application utilizes socket programming and Tkinter to provide a basic remote desktop access solution. It sets up a client-server connection, enabling the client to view and control the server's desktop interface remotely</p>
+                    <p>The Simple Remote Desktop application utilizes socket programming and Tkinter to provide a basic remote desktop access solution. It sets up a client-server connection, enabling the client to view and control the server's desktop interface remotely</p>
                   </div>
                 </div>
               </div>  
+              <span style='font-size:50px;'>&#9548;</span>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <h1>os shell</h1>
+                    <h2>os shell</h2>
                   </div>
                   <div class="flip-card-back">
                     <p>This project involves creating a custom shell for an operating system, designed to interpret and execute user commands. The shell provides essential functionalities such as command parsing, process creation, and file system navigation, enhancing user interaction with the OS.</p>
                   </div>
                 </div>
               </div>  
+              <span style='font-size:50px;'>&#9548;</span>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <h1>movie booking system</h1>
+                    <h2>movie booking system</h2>
                   </div>
                   <div class="flip-card-back">
                     <p>This project develops a Movie Ticket Booking System using React for the front-end, Node.js for the back-end, and MySQL for the database. The system allows users to browse movies, select showtimes, book tickets, and manage accounts, while administrators can manage schedules and view bookings</p>
                   </div>
                 </div>
               </div> 
+              <span style='font-size:50px;'>&#9548;</span>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <h1>car rental system</h1>
+                    <h2>car rental system</h2>
                   </div>
                   <div class="flip-card-back">
                     <p>This project implements a Car Rental System in C++ featuring user authentication. It allows users to securely log in, browse available cars, make reservations, and manage their rental history, providing an efficient and secure platform for car rentals.</p>
                   </div>
                 </div>
               </div>
+              <span style='font-size:50px;'>&#9548;</span>
         </div> 
     </section>
     <section class="c" id="page5">
