--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
           <div class="skills R">90%</div>
         </div>
 
-        <h2>WEB DEVELOPMENT</h2>
+        <p>Dart</p>
+        <div class="container">
+          <div class="skills R">80%</div>
+        </div>
+
+        <h2>WEB/ UI/UX DEVELOPMENT</h2>
         <p>HTML</p>
         <div class="container">
           <div class="skills html">90%</div>
@@ -97,6 +102,12 @@
         <div class="container">
           <div class="skills react">65%</div>
         </div>
+
+        <p>Flutter</p>
+        <div class="container">
+          <div class="skills react">50%</div>
+        </div>
+        
         <h2>DATABASE DESIGN</h2>
         <p>Oracle</p>
         <div class="container">
