--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <p>Dart</p>
         <div class="container">
-          <div class="skills R">80%</div>
+          <div class="skills d">80%</div>
         </div>
 
         <h2>WEB/ UI/UX DEVELOPMENT</h2>
@@ -105,7 +105,7 @@
 
         <p>Flutter</p>
         <div class="container">
-          <div class="skills react">50%</div>
+          <div class="skills f">50%</div>
         </div>
         
         <h2>DATABASE DESIGN</h2>
