--- a/index.html
+++ b/index.html
@@ -77,12 +77,7 @@
           <div class="skills R">90%</div>
         </div>
 
-        <p>Dart</p>
-        <div class="container">
-          <div class="skills d">80%</div>
-        </div>
-
-        <h2>WEB/ UI/UX DEVELOPMENT</h2>
+        <h2>WEB DEVELOPMENT</h2>
         <p>HTML</p>
         <div class="container">
           <div class="skills html">90%</div>
@@ -101,11 +96,6 @@
         <p>React</p>
         <div class="container">
           <div class="skills react">65%</div>
-        </div>
-
-        <p>Flutter</p>
-        <div class="container">
-          <div class="skills f">50%</div>
         </div>
         
         <h2>DATABASE DESIGN</h2>
